fix(columns) Fix influenced too much of the original page; extra selector yay

--- a/source/assets/scss/core/_fixes.scss
+++ b/source/assets/scss/core/_fixes.scss
@@ -1,7 +1,7 @@
 // These are fixes to counter drama caused by Foundation or other frameworks
 // and bad behaviour by unitid default css
 
-[class*="column"] + [class*="column"]:last-child {
+.case [class*="column"] + [class*="column"]:last-child {
 	float: none;
 }
 
